Fix path meeting scheduler image 2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <d class="projects-container">
         
             <a href="https://pionetto.github.io/meeting-scheduler/" target="_blank" class="project-tile">
-              <img src="https://github.com/pionetto/portfolio/blob/main/img/meeting-scheduler.png" alt="meeting scheduler" />
+              <img src="https://raw.githubusercontent.com/pionetto/portfolio/main/img/meeting-scheduler.png" alt="meeting scheduler" />
               <p>Meeting Scheduler</p>
             </a>
           
